--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,6 +81,8 @@
 let jawOpenIndex = null;
 let mouthWideIndex = null;
 let mouthPuckerIndex = null;
+let mouthSmileIndex = null;  // 🆕 NEU: mouthSmile für „A“
+let mouthFrownIndex = null;  // 🆕 NEU: mouthFrown für „O“, „M“, „P“
 
 // Audio / Analyse
 let audioCtx, analyser, src;
@@ -124,7 +126,6 @@ function resetMovements() {
   rising   = false;
   talking  = false;
 }
-
 /* -----------------------------
    THREE.js SETUP
 ----------------------------- */
@@ -190,6 +191,8 @@ loader.load("./avatar.glb", gltf => {
         if (lower.includes("jaw"))   jawOpenIndex = idx;
         if (lower.includes("wide"))  mouthWideIndex = idx;
         if (lower.includes("puck"))  mouthPuckerIndex = idx;
+        if (lower.includes("smile")) mouthSmileIndex = idx;  // 🆕 mouthSmile für „A“
+        if (lower.includes("frown")) mouthFrownIndex = idx;  // 🆕 mouthFrown für „O“, „M“, „P“
       }
     }
   });
@@ -197,7 +200,9 @@ loader.load("./avatar.glb", gltf => {
   console.log("✔ FINAL Blendshape-Indices:",
               "jawOpen =", jawOpenIndex,
               "| mouthWide =", mouthWideIndex,
-              "| mouthPucker =", mouthPuckerIndex);
+              "| mouthPucker =", mouthPuckerIndex,
+              "| mouthSmile =", mouthSmileIndex,  // 🆕 Debugging
+              "| mouthFrown =", mouthFrownIndex);  // 🆕 Debugging
 
   // === MODEL STARTEN ===
   scene.add(model);
@@ -217,111 +222,6 @@ function setBlendshape(index, value) {
   });
 }
 
-
-  // ====================================
-// ANIMATE – FINAL & STABLE
-// ====================================
-function animate() {
-  requestAnimationFrame(animate);
-  if (!model) return;
-
-  // 🧊 Nur Idle, wenn NICHT gerade frisch gesprochen wurde:
-  if (!talking && !justFinishedSpeaking && !mouthCooldown) {
-      setBlendshape(jawOpenIndex, 0.05);  // dezente Atmung
-      setBlendshape(mouthWideIndex, 0.0);
-      setBlendshape(mouthPuckerIndex, 0.0);
-  }
-
-  const now = performance.now();
-  const frontalY = -Math.PI / 2;               // frontal
-  const rightY   = baseRotY - Math.PI / 2;     // Startpose rechts
-  const leftY    = frontalY + 0.25;            // Hmmm = leicht links
-
-  // 0️⃣ START: Ausgangsposition (leicht rechts)
-  if (frontalFix) {
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, rightY, 0.08);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.08);
-    renderer.render(scene, camera);
-    return;
-  }
-
-
-  // 1️⃣ GREET / ANTWORTBEGINN → FRONTAL
-  if (rising) {
-    const t = (now - riseStartTime) / riseDuration;
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.06);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.06);
-    if (t >= 1) rising = false;
-  }
-
-  // 2️⃣ HMMM → LANGSAM LINKS
-  else if (hmNeigen) {
-    const t = Math.min(1, (now - hmStartTime) / hmDuration);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX + 0.25, t);
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, leftY, t);
-  }
-
-  // 3️⃣ ANTWORT → FRONTAL
-  else if (STATE === "answer") {
-    model.position.y = baseY + Math.sin(now * 0.0015) * 0.008;
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
-  }
-
-  // 4️⃣ TALKING = SPRICHT → FRONTAL & ATMEN
-  else if (talking) {
-    model.position.y = baseY + Math.sin(now * 0.0015) * 0.008;
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
-  }
-
-  // 5️⃣ WARTET AUF FRAGE → FRONTAL
-  else if (STATE === "listen" || STATE === "greet") {
-    model.position.y = baseY + Math.sin(now * 0.0012) * 0.006;
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
-  }
-
-  // 6️⃣ ENDE → SANFT ZURÜCK NACH RECHTS
-else if (STATE === "idle" && !talking && !rising) {
-  const breathSpeed = 0.0011 + Math.sin(now * 0.00005) * 0.0004;
-  const breathAmp   = 0.006  + Math.sin(now * 0.00008) * 0.003;
-  model.position.y  = baseY + Math.sin(now * breathSpeed) * breathAmp;
-
-  model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, rightY, 0.03);
-  model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.03);
-}
-
-// ⭐ Sichtbare, natürliche Blickbewegungen – Version 2 (mehr Dynamik!)
-const driftX = Math.sin(now * 0.0012) * 0.05;   // klar sichtbares Nicken
-const driftY = Math.sin(now * 0.0010) * 0.04;   // klar seitlich „denken“
-
-// X-Achse → Richtung baseRotX + Variation
-model.rotation.x = THREE.MathUtils.lerp(
-  model.rotation.x,
-  baseRotX + driftX,
-  0.03          // schnellere Reaktion
-);
-
-// Y-Achse → nur wenn kein Hmmm aktiv (NICHT Antwort unterbrechen!)
-if (!hmNeigen && !rising) {
-  model.rotation.y = THREE.MathUtils.lerp(
-    model.rotation.y,
-    model.rotation.y + driftY,
-    0.018
-  );
-}
- // 🟢 OpenAI TTS / SpeechSynthesis steuern Lippen
-// Animate greift NICHT ein, solange talking = true!
-if (!talking) {
-  // hier nur Idle-Mundhaltung, sobald NICHT gesprochen wird:
-  setBlendshape(jawOpenIndex, 0.1);  // leicht offen (Atmung)
-  setBlendshape(mouthWideIndex, 0);
-  setBlendshape(mouthPuckerIndex, 0);
-}
-renderer.render(scene, camera);
-}
-  
 /* -----------------------------
    STATE MACHINE – LOGIK (FINAL)
 ----------------------------- */
@@ -410,7 +310,116 @@ fetch("/tts", {
     }
   };
 }
-   /* -----------------------------
+  
+// ====================================
+// ANIMATE – FINAL & STABLE
+// ====================================
+function animate() {
+  requestAnimationFrame(animate);
+  if (!model) return;
+
+  // 🧊 Nur Idle, wenn NICHT gerade frisch gesprochen wurde:
+  if (!talking && !justFinishedSpeaking && !mouthCooldown) {
+      setBlendshape(jawOpenIndex, 0.05);  // dezente Atmung
+      setBlendshape(mouthWideIndex, 0.0);
+      setBlendshape(mouthPuckerIndex, 0.0);
+      setBlendshape(mouthSmileIndex, 0);  // 🆕 reset mouthSmile
+      setBlendshape(mouthFrownIndex, 0);  // 🆕 reset mouthFrown
+  }
+
+  const now = performance.now();
+  const frontalY = -Math.PI / 2;               // frontal
+  const rightY   = baseRotY - Math.PI / 2;     // Startpose rechts
+  const leftY    = frontalY + 0.25;            // Hmmm = leicht links
+
+  // 0️⃣ START: Ausgangsposition (leicht rechts)
+  if (frontalFix) {
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, rightY, 0.08);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.08);
+    renderer.render(scene, camera);
+    return;
+  }
+
+  // 1️⃣ GREET / ANTWORTBEGINN → FRONTAL
+  if (rising) {
+    const t = (now - riseStartTime) / riseDuration;
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.06);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.06);
+    if (t >= 1) rising = false;
+  }
+
+  // 2️⃣ HMMM → LANGSAM LINKS
+  else if (hmNeigen) {
+    const t = Math.min(1, (now - hmStartTime) / hmDuration);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX + 0.25, t);
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, leftY, t);
+  }
+
+  // 3️⃣ ANTWORT → FRONTAL
+  else if (STATE === "answer") {
+    model.position.y = baseY + Math.sin(now * 0.0015) * 0.008;
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
+  }
+
+  // 4️⃣ TALKING = SPRICHT → FRONTAL & ATMEN
+  else if (talking) {
+    model.position.y = baseY + Math.sin(now * 0.0015) * 0.008;
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
+  }
+
+  // 5️⃣ WARTET AUF FRAGE → FRONTAL
+  else if (STATE === "listen" || STATE === "greet") {
+    model.position.y = baseY + Math.sin(now * 0.0012) * 0.006;
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
+  }
+
+  // 6️⃣ ENDE → SANFT ZURÜCK NACH RECHTS
+  else if (STATE === "idle" && !talking && !rising) {
+    const breathSpeed = 0.0011 + Math.sin(now * 0.00005) * 0.0004;
+    const breathAmp   = 0.006  + Math.sin(now * 0.00008) * 0.003;
+    model.position.y  = baseY + Math.sin(now * breathSpeed) * breathAmp;
+
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, rightY, 0.03);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.03);
+  }
+
+  // ⭐ Sichtbare, natürliche Blickbewegungen – Version 2 (mehr Dynamik!)
+  const driftX = Math.sin(now * 0.0012) * 0.05;   // klar sichtbares Nicken
+  const driftY = Math.sin(now * 0.0010) * 0.04;   // klar seitlich „denken“
+
+  // X-Achse → Richtung baseRotX + Variation
+  model.rotation.x = THREE.MathUtils.lerp(
+    model.rotation.x,
+    baseRotX + driftX,
+    0.03          // schnellere Reaktion
+  );
+
+  // Y-Achse → nur wenn kein Hmmm aktiv (NICHT Antwort unterbrechen!)
+  if (!hmNeigen && !rising) {
+    model.rotation.y = THREE.MathUtils.lerp(
+      model.rotation.y,
+      model.rotation.y + driftY,
+      0.018
+    );
+  }
+
+  // 🟢 OpenAI TTS / SpeechSynthesis steuern Lippen
+  // Animate greift NICHT ein, solange talking = true!
+  if (!talking) {
+    // hier nur Idle-Mundhaltung, sobald NICHT gesprochen wird:
+    setBlendshape(jawOpenIndex, 0.1);  // leicht offen (Atmung)
+    setBlendshape(mouthWideIndex, 0);
+    setBlendshape(mouthPuckerIndex, 0);
+    setBlendshape(mouthSmileIndex, 0);  // 🆕 reset mouthSmile
+    setBlendshape(mouthFrownIndex, 0);  // 🆕 reset mouthFrown
+  }
+
+  renderer.render(scene, camera);
+}
+  /* -----------------------------
    BUTTON – GREET & LISTEN
 ----------------------------- */
 document.getElementById("micBtn").onclick = () => {
@@ -475,6 +484,7 @@ function setBlendshape(index, value) {
     }
   });
 }
+
 function lerp(a, b, t) {  // linearer Übergang
   return a + (b - a) * t;
 }
@@ -517,32 +527,41 @@ function speak(text, slow = false) {
       const wide = jaw * 0.32;
       const puck = jaw * 0.18;
 
+      // 🆕 Hinzugefügte Blendshapes
+      const smile = Math.abs(Math.sin(t)) * 0.2;  // Lächeln (A-Laut)
+      const frown = Math.abs(Math.cos(t)) * 0.2;  // Falten (O, M, P-Laute)
+
+      // Blendshapes setzen
       setBlendshape(jawOpenIndex, jaw);
       setBlendshape(mouthWideIndex, wide);
       setBlendshape(mouthPuckerIndex, puck);
+      setBlendshape(mouthSmileIndex, smile);  // 🆕 Lächeln hinzufügen
+      setBlendshape(mouthFrownIndex, frown);  // 🆕 Falten hinzufügen
     }, 38);
   };
 
-u.onend = () => {
-  clearInterval(lipsyncInterval);
-  lipsyncInterval = null;
-  talking = false;
+  u.onend = () => {
+    clearInterval(lipsyncInterval);
+    lipsyncInterval = null;
+    talking = false;
 
-  // Sofort in Idle
-  setBlendshape(jawOpenIndex, 0.05);
-  setBlendshape(mouthWideIndex, 0);
-  setBlendshape(mouthPuckerIndex, 0);
+    // Sofort in Idle
+    setBlendshape(jawOpenIndex, 0.05);
+    setBlendshape(mouthWideIndex, 0);
+    setBlendshape(mouthPuckerIndex, 0);
+    setBlendshape(mouthSmileIndex, 0);  // 🆕 reset mouthSmile
+    setBlendshape(mouthFrownIndex, 0);  // 🆕 reset mouthFrown
 
-  // Cooldown für animate(), aber micro-delay!
-  justFinishedSpeaking = true;
-  mouthCooldown = true;
+    // Cooldown für animate(), aber micro-delay!
+    justFinishedSpeaking = true;
+    mouthCooldown = true;
 
-  // ⏱ dieser Trick killt das Geister-Zittern:
-  setTimeout(() => {
-    justFinishedSpeaking = false;
-    mouthCooldown = false;
-  }, 20); // nur 20ms → fühlbar, aber unsichtbar
-};
+    // ⏱ dieser Trick killt das Geister-Zittern:
+    setTimeout(() => {
+      justFinishedSpeaking = false;
+      mouthCooldown = false;
+    }, 20); // nur 20ms → fühlbar, aber unsichtbar
+  };
 
   // GANZ WICHTIG!
   speechSynthesis.speak(u);
