--- a/frontend/index.html
+++ b/frontend/index.html
@@ -521,33 +521,30 @@ function speak(text, slow = false) {
 
       // Jaw (Kieferöffnung, beeinflusst durch A-Laute)
       let jaw = Math.abs(Math.sin(t)) * 0.45;
-      jaw += (Math.random() * 0.12 - 0.06);
+      jaw += (Math.random() * 0.08 - 0.04); // Reduzierter Zufallseffekt
       jaw = Math.min(Math.max(jaw, 0), 0.45);
-      
-      // Minderung von Zittern: Zufallseffekt reduzieren
-      if (Math.random() < 0.03) jaw *= 0.25;
 
       // Breite und Pucker (Mundöffnung und -zusammenziehen)
       const wide = jaw * 0.32;
       const puck = jaw * 0.18;
 
       // 🆕 Blendshapes für A, O, M, P
-      const smile = Math.abs(Math.sin(t)) * 0.2;  // Lächeln (A-Laut)
-      const frown = Math.abs(Math.cos(t)) * 0.2;  // Falten (O, M, P-Laute)
+      const smile = Math.abs(Math.sin(t)) * 0.25;  // Lächeln (A-Laut) stärker betonen
+      const frown = Math.abs(Math.cos(t)) * 0.25;  // Falten (O, M, P-Laute) stärker betonen
 
       // Sorgfältige Anpassung der Laute (für A, O, M, P)
-      const mLaute = Math.sin(t) * 0.1;  // P-Laute und M-Laute - leichter Mundschluss
-      const aOLaute = Math.abs(Math.cos(t)) * 0.2;  // O-Laute und A-Laute - weiter Öffnen
+      const mLaute = Math.sin(t) * 0.15;  // P-Laute und M-Laute - leicht stärkerer Mundschluss
+      const aOLaute = Math.abs(Math.cos(t)) * 0.3;  // O-Laute und A-Laute - noch mehr Öffnung
 
       // Blendshapes setzen
       setBlendshape(jawOpenIndex, jaw);
       setBlendshape(mouthWideIndex, wide);
       setBlendshape(mouthPuckerIndex, puck);
-      setBlendshape(mouthSmileIndex, smile);  // Lächeln (A-Laut)
-      setBlendshape(mouthFrownIndex, frown);  // Falten (O, M, P-Laute)
+      setBlendshape(mouthSmileIndex, smile);  // Lächeln (A-Laut) verstärken
+      setBlendshape(mouthFrownIndex, frown);  // Falten (O, M, P-Laute) verstärken
       setBlendshape(mouthPuckerIndex, mLaute);  // P-Laute / M-Laute - stärkerer Mundschluss
       setBlendshape(mouthWideIndex, aOLaute);  // O und A Laute - weiter Öffnen
-    }, 50);  // Intervall leicht verlängert (z.B. 50ms für flüssigere Animation)
+    }, 50);  // Intervall bleibt bei 50ms für flüssigere Animation
   };
 
   u.onend = () => {
