--- a/frontend/index.html
+++ b/frontend/index.html
@@ -517,7 +517,8 @@ function speak(text, slow = false) {
 
     if (femaleVoice) {
       u.voice = femaleVoice;
-      u.pitch = 0; // Tieferer Ton für die weibliche Stimme, um sie "männlicher" klingen zu lassen
+      u.rate = 0.8;
+      u.pitch = 0.3; // Tieferer Ton für die weibliche Stimme, um sie "männlicher" klingen zu lassen
     }
   }
 
