--- a/frontend/index.html
+++ b/frontend/index.html
@@ -523,43 +523,53 @@ function speak(text, slow = false) {
   }
 
   let lipsyncInterval = null;
-  let t = 0;
+let t = 0;
 
-  u.onstart = () => {
-    talking = true;
-    mouthCooldown = false;
-    justFinishedSpeaking = false;
+// Sanfter Drift, damit nie Frame-zu-Frame gesprungen wird
+let jawDrift = 0;
 
-    lipsyncInterval = setInterval(() => {
-      t += slow ? 0.05 : 0.12;
+u.onstart = () => {
+  talking = true;
+  mouthCooldown = false;
+  justFinishedSpeaking = false;
 
-      // Jaw (Kieferöffnung, beeinflusst durch A-Laute)
-      let jaw = Math.abs(Math.sin(t)) * 0.45;
-      jaw += (Math.random() * 0.08 - 0.04); // Reduzierter Zufallseffekt
-      jaw = Math.min(Math.max(jaw, 0), 0.45);
+  lipsyncInterval = setInterval(() => {
+    // 🟢 1) Unregelmäßiges Timing → natürlich, aber nicht zittrig
+    const baseStep = slow ? 0.05 : 0.12;
+    const stepVariation = 1 + (Math.random() * 0.25 - 0.12); // ±12 %
+    t += baseStep * stepVariation;
 
-      // Breite und Pucker (Mundöffnung und -zusammenziehen)
-      const wide = jaw * 0.32;
-      const puck = jaw * 0.18;
+    // 🟢 2) Low-Frequency-Noise für natürliche Unregelmäßigkeit
+    jawDrift += (Math.random() * 0.01 - 0.005); 
+    jawDrift = Math.min(Math.max(jawDrift, -0.04), 0.04); // Begrenzung
 
-      // 🆕 Blendshapes für A, O, M, P
-      const smile = Math.abs(Math.sin(t)) * 0.30;  // Lächeln (A-Laut) stärker betonen
-      const frown = Math.abs(Math.cos(t)) * 0.30;  // Falten (O, M, P-Laute) stärker betonen
+    // 🟢 3) Grundbewegung Kiefer
+    let jaw = Math.abs(Math.sin(t)) * 0.45 + jawDrift;
+    jaw = Math.min(Math.max(jaw, 0), 0.5); // clamp
 
-      // Sorgfältige Anpassung der Laute (für A, O, M, P)
-      const mLaute = Math.sin(t) * 0.18;  // P-Laute und M-Laute - leicht stärkerer Mundschluss
-      const aOLaute = Math.abs(Math.cos(t)) * 0.33;  // O-Laute und A-Laute - noch mehr Öffnung
+    // 🟢 4) Breite & Pucker (sanfte Variation)
+    const wide = jaw * (0.32 + (Math.random() * 0.05 - 0.025));
+    const puck = jaw * (0.18 + (Math.random() * 0.05 - 0.025));
 
-      // Blendshapes setzen
-      setBlendshape(jawOpenIndex, jaw);
-      setBlendshape(mouthWideIndex, wide);
-      setBlendshape(mouthPuckerIndex, puck);
-      setBlendshape(mouthSmileIndex, smile);  // Lächeln (A-Laut) verstärken
-      setBlendshape(mouthFrownIndex, frown);  // Falten (O, M, P-Laute) verstärken
-      setBlendshape(mouthPuckerIndex, mLaute);  // P-Laute / M-Laute - stärkerer Mundschluss
-      setBlendshape(mouthWideIndex, aOLaute);  // O und A Laute - weiter Öffnen
-    }, 45);  // Intervall bleibt bei 50ms für flüssigere Animation
-  };
+    // 🟢 5) Smile & Frown (für A-/O-Laute)
+    const smile = Math.abs(Math.sin(t * 0.9)) * 0.30;
+    const frown = Math.abs(Math.cos(t * 1.1)) * 0.30;
+
+    // 🟢 6) Lautdynamik – kleine Boosts (verstärkt Realismus)
+    const boost = 1 + (Math.random() * 0.12 - 0.06); // ±6 %
+
+    const mLaute = Math.sin(t) * 0.18 * boost;        // M/P
+    const aOLaute = Math.abs(Math.cos(t)) * 0.33 * boost; // A/O
+
+    // 🟢 7) Blendshapes setzen (final)
+    setBlendshape(jawOpenIndex, jaw);
+    setBlendshape(mouthWideIndex, wide * 1.0 + aOLaute * 0.3);
+    setBlendshape(mouthPuckerIndex, puck * 1.0 + mLaute * 0.3);
+    setBlendshape(mouthSmileIndex, smile * 0.9);
+    setBlendshape(mouthFrownIndex, frown * 0.9);
+
+  }, 33); // ~30 FPS
+};
 
   u.onend = () => {
     clearInterval(lipsyncInterval);
