--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,6 +67,9 @@
 <div id="loading">Avatar wird geladen…</div>
 <canvas id="avatarCanvas"></canvas>
 <button id="micBtn">🎤</button>
+<footer>
+© 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
