--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,6 +59,23 @@
     font-size:1.1em;
     text-align:center;
   }
+  footer {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  text-align: center;
+  color: #888; /* grau wie früher */
+  font-size: 0.9em;
+}
+
+footer a {
+  color: #888; /* Link ebenfalls grau */
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #bbb; /* leicht heller beim Hover */
+}
 </style>
 </head>
 
